[package]
name = "lockless_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
xxhash-rust = "0.8.4"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[lib]
name = "lib"
path = "src/lib.rs"
test = true
bench = true

[features]
